--- a/mini-0005/css/index.css
+++ b/mini-0005/css/index.css
@@ -1,27 +1,47 @@
 html, body {
 	height: 100%;
-	font-family: 'Roboto', sans-serif;
 }
 
 body {
 	display: flex;
 	flex-direction: column;
 	font-size: x-large;
+	font-family: 'Roboto', sans-serif;
+	color: rgba(0,0,0,0.87);
 }
 
-.no-select {
-  -webkit-touch-callout: none; /* iOS Safari */
-  -webkit-user-select: none;   /* Chrome/Safari/Opera */
-  -moz-user-select: none;      /* Firefox */
-  -ms-user-select: none;       /* Internet Explorer/Edge */
-  user-select: none;           /* Non-prefixed version, currently
-                                  not supported by any browser */
+#battle {
+	flex-shrink: 0;
+	padding: 10px;
+}
+
+.health {
+	width: 35%;
+	background: #CFD8DC;
+}
+
+.health-bar {
+	background: #8BC34A;
+}
+
+.health-text {
+	padding: 5px 10px;
+	font-size: xx-large;
+}
+
+.player.health {
+	float: left;
+}
+
+.enemy.health, .enemy.health div {
+	float: right;
 }
 
 #output {
 	flex-grow: 1;
 	overflow-y: auto;
-	padding: 10px;
+	padding: 0px 10px;
+	margin-bottom: 10px;
 }
 
 #controls {
@@ -45,4 +65,12 @@ body {
 	font-size: xx-large;
 	text-align: center;
 	user-select: none;
+}
+
+.no-select {
+	-webkit-touch-callout: none;	/* iOS Safari */
+	-webkit-user-select: none;		/* Chrome/Safari/Opera */
+	-moz-user-select: none;			/* Firefox */
+	-ms-user-select: none;			/* Internet Explorer/Edge */
+	user-select: none;				/* Non-prefixed version, currently not supported by any browser */
 }
