--- a/mini-0005/css/index.css
+++ b/mini-0005/css/index.css
@@ -7,13 +7,45 @@ body {
 	flex-direction: column;
 	font-size: x-large;
 	font-family: 'Roboto', sans-serif;
+}
+
+/* Text color */
+
+.dark-primary-text {
 	color: rgba(0,0,0,0.87);
 }
+
+.dark-secondary-text {
+	color: rgba(0,0,0,0.54);
+}
+
+.dark-hint-text {
+	color: rgba(0,0,0,0.38);
+}
+
+.light-primary-text {
+	color: rgba(255,255,255,1.00);
+}
+
+.light-secondary-text {
+	color: rgba(255,255,255,0.70);
+}
+
+.light-hint-text {
+	color: rgba(255,255,255,0.50);
+}
+
+/* Battle UI */
 
 #battle {
 	flex-shrink: 0;
 	padding: 10px;
-	font-size: xx-large;
+	font-size: x-large;
+	background: #E3F2FD;
+}
+
+#battle .title {
+	margin-bottom: 5px;
 }
 
 .level {
@@ -22,7 +54,7 @@ body {
 
 .health {
 	width: 40vw;
-	background: #CFD8DC;
+	background: rgba(0,0,0,0.08);
 }
 
 .health-bar {
@@ -31,6 +63,7 @@ body {
 
 .health-text {
 	padding: 5px 10px;
+	font-size: xx-large;
 }
 
 .player {
@@ -45,12 +78,22 @@ body {
 	float: right;
 }
 
+.exp-bar {
+	background: #90CAF9;
+	height: 0.5em;
+}
+
+.exp-text {
+	margin-top: 5px;
+}
+
 #output {
 	flex-grow: 1;
 	overflow-y: auto;
 	padding: 0px 10px;
-	margin-bottom: 10px;
 }
+
+/* Controls */
 
 #controls {
 	flex-shrink: 0;
@@ -68,12 +111,13 @@ body {
 	padding: 10px;
 	margin: 5px;
 	background: #2196F3;
-	color: #fff;
 	cursor: pointer;
 	font-size: xx-large;
 	text-align: center;
 	user-select: none;
 }
+
+/* Misc */
 
 .no-select {
 	-webkit-touch-callout: none;	/* iOS Safari */
